src/htdocs/css/_summaryPane.scss
#summaryPane {
  h2 + p {
    margin: -.25rem 0 1.5rem;
  }

  h3 {
    margin: 2em 0 .5em;
  }

  table {
    border-collapse: collapse;
    margin: 0 0 1em;

    abbr {
      border-bottom: 1px dotted #999;
      cursor: help;
    }
  }

  td {
    padding: .4em .5em;

    &.depth,
    &.distance,
    &.mag {
      text-align: right;
    }
    &.distance span {
      display: inline-block;
      text-align: left;
      width: 1.5em;
    }
    &.location {
      text-align: center;
    }
    &.rowlabel {
      color: #333;
      font-weight: 500;
    }
  }

  th {
    color: #333;
    font-size: .95rem;
    font-weight: 500;
    padding: .25em .5em;
    text-align: center;
    text-transform: uppercase;

    &.period {
      text-align: right;
    }

    &.sort-header {
      cursor: pointer;

      &:selection {
        background: transparent;
      }

      &:after {
        border-color: #404040 transparent;
        border-style: solid;
        border-width: 0 4px 4px;
        content: '';
        display: inline-block;
        margin: 4px 0 4px 2px;
        visibility: hidden;
      }

      &.sort-up:after,
      &.sort-down:after {
        opacity: 1.0;
        visibility: visible;
      }
      &.sort-up:after {
        border-bottom: none;
        border-width: 4px 4px 0;
      }
    }
  }

  tr {
    border: solid #e8e8e8;
    border-width: 0 0 1px;

    &:first-child {
      border-color: #ccc;
    }
  }

  time.updated {
    display: block;
    margin: 1em 1em 0;
    text-align: right;

    &:before {
      content: 'Updated: ';
    }
  }

  .bin {
    td {
      &:not(:first-child) {
        text-align: right;
      }
      &.rowlabel {
        padding-right: 1.5em;
      }
    }

    th {
      padding-left: .25em;
      padding-right: .25em;
    }
  }

  .bins {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: -1.5em;

    table {
      margin-right: 2em;

      &:last-child {
        margin-right: 0;
      }
    }
  }

  .darker {
    td.rowlabel {
      background: url(../img/gradient-darker.png) repeat-y;
      background-position: right;
    }
    td.total {
      background-color: #edf1f7;
    }
  }

  .feature {
    width: 100%;
    h2 {
      margin-top: 0;
    }

    &:first-child {
      border: 0;
    }
  }

  .features {
    display: flex;
    flex-wrap: wrap;
  }

  .lighter {
    td.rowlabel {
      background: url(../img/gradient-lighter.png) repeat-y;
      background-position: right;
    }
    td.total {
      background-color: #fafafa;
    }
  }

  .note {
    color: #666;
    font-size: .9rem;
    line-height: 1.4;
    margin: -.75rem 0 0 3px;
  }

  .star {
    display: none;
  }
}

#mainshock {
  order: 0;
}
#aftershocks {
  order: 1;
}
#historical {
  order: 2;
}

@media only screen
and (max-width: $breakpoint-phone-width) {
  #summaryPane {
    .location {
      display: none;
    }
    .star {
      display: inline-block;
      margin-left: 2px;
    }
    .tz {
      display: none;
    }
  }
}

